--- a/.github/workflows/updateFromMaster.yml
+++ b/.github/workflows/updateFromMaster.yml
@@ -1,6 +1,10 @@
 name: Fetch Upstream
 
-on: pull_request
+on:
+  schedule:
+    # * is a special character in YAML so you have to quote this string
+
+    - cron:  '*/15 * * * *'
 
 jobs:
   fetch-upstream:
