--- a/.github/workflows/updateFromMaster.yml
+++ b/.github/workflows/updateFromMaster.yml
@@ -14,6 +14,6 @@ jobs:
     - name: Fetch Upstream
       uses: bdougie/fetch-upstream@master
       with:
-        upstream: babel/babel
+        upstream: CSSEGISandData/COVID-19
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
