--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -9,10 +9,12 @@
     "gatsby": "^2.3.34",
     "gatsby-image": "^2.0.41",
     "gatsby-plugin-manifest": "^2.0.29",
+    "gatsby-plugin-mdx": "^1.1.4",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sass": "^2.0.11",
-    "gatsby-plugin-sharp": "^2.0.35",
+    "gatsby-plugin-sharp": "^2.5.3",
+    "gatsby-remark-images": "^3.2.1",
     "gatsby-source-filesystem": "^2.0.33",
     "gatsby-transformer-remark": "^2.7.1",
     "gatsby-transformer-sharp": "^2.1.18",
