--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "gatsby": "^2.3.34",
+    "gatsby-background-image": "^1.0.1",
     "gatsby-image": "^2.0.41",
     "gatsby-plugin-manifest": "^2.0.29",
     "gatsby-plugin-mdx": "^1.1.4",
