--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -5,6 +5,9 @@
   "version": "0.1.0",
   "author": "Billy Jacoby <billyjacoby@gmail.com>",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "bootstrap": "^4.3.1",
     "gatsby": "^2.3.34",
     "gatsby-background-image": "^1.0.1",
@@ -25,7 +28,7 @@
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
-    "react-icons": "^3.6.1"
+    "react-icons": "^3.9.0"
   },
   "devDependencies": {
     "gh-pages": "^2.2.0",
