--- a/.github/workflows/new-tag.yml
+++ b/.github/workflows/new-tag.yml
@@ -18,7 +18,7 @@ jobs:
 
             - name: Update Gatsby
               run: |
-                chmod +x .update_gatsby.sh
+                chmod +x update_gatsby.sh
                 ./update_gatsby.sh
     # Do a second step
     instead_of_tweet:
