--- a/.github/workflows/new-tag.yml
+++ b/.github/workflows/new-tag.yml
@@ -7,7 +7,7 @@ on:
     branches: 
       - "master"
     tags:
-        - "*.*"               # Run on every tag
+        - "*"               # Run on every tag
 
 jobs:
     # Do a second step
