--- a/.github/workflows/new-tag.yml
+++ b/.github/workflows/new-tag.yml
@@ -5,15 +5,27 @@ name: Update page on tags (excluding data-update)
 on:
   push:
     tags:
-        - "*"               # Run on every tag
+      - "*" # Run on every tag
 
 jobs:
-    # Do a second step
-    instead_of_tweet:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v2
+  # Simple step
+  before_tweet:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
 
-            # Runs a single command using the runners shell
-            - name: Run a one-line script
-              run: echo Hello, world! This is a test
+      # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: echo Hello, world! This is a test
+  # Now inform twitter about it (but wait for gatsby to be finished)
+  tweet:
+    runs-on: ubuntu-latest
+    needs: before_tweet
+    steps:
+      - uses: ethomson/send-tweet-action@v1
+        with:
+          status: "Just updated my COVID-19 visualization page with the newest data from @Johns Hopkins ... Check it out at https://fezde.github.io/COVID-19 - And if you have any ideas or feedback, let me know!"
+          consumer-key: ${{ secrets.TWITTER_CONSUMER_API_KEY }}
+          consumer-secret: ${{ secrets.TWITTER_CONSUMER_API_SECRET }}
+          access-token: ${{ secrets.TWITTER_ACCESS_TOKEN }}
+          access-token-secret: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
