--- a/.github/workflows/test-on-start-manually.yml
+++ b/.github/workflows/test-on-start-manually.yml
@@ -14,4 +14,4 @@ jobs:
        - name: Checkout repository
          uses: actions/checkout@v2
        - name: Execute update
-         run: ./update.sh
+         run: ./update-test.sh
