--- a/.github/workflows/test-on-start-manually.yml
+++ b/.github/workflows/test-on-start-manually.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Check for upstream
         run: git remote -v
       - name: Add upstream
-        run: git remote add upstream https://github.com/CSSEGISandData/COVID-19
+        run: git remote add upstream https://github.com/CSSEGISandData/COVID-19.git
       - name: Check if upstream is set now
         run: git remote -v
       - name: Git fetch
