--- a/.github/workflows/test-on-start-manually.yml
+++ b/.github/workflows/test-on-start-manually.yml
@@ -13,6 +13,10 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+      - name: Install setuptools	
+        run: pip3 install setuptools	
+      - name: Install wheel	
+        run: pip3 install wheel
       - name: Install required libs
         run: pip3 install -r requirements.txt
       - name: Execute update
